# TriMeshFixer

./: CMakeLists.txt  README.md
include/: GraphMesh.h  edge.h  linkedList.h  triangle.h  vertex.h
src/: GraphMesh.cpp  edge.cpp  linkedList.cpp  triangle.cpp  vertex.cpp
